src/css/landing.css
.title-page {
    overflow-x: hidden;
    height: 100%;
    width: 100%;
}

.title-page::-webkit-scrollbar {
    display: none;
}

.title {
    color: white;
    font-style: normal;
    font-family: "Muli", sans-serif;
    font-weight: 900;
    font-size: 150px;
    mix-blend-mode: normal;
    opacity: 0.2;
    text-shadow: 12.6815px 12.6815px 95.1111px rgba(0, 0, 0, 0.2);
    backdrop-filter: blur(31.7037px);
    text-align: center;
    margin-top: 3rem;
    text-transform: uppercase;
    letter-spacing: 15px;
}

.title-two{
    color: white;
    font-family: "Muli", sans-serif;
    font-style: normal;
    font-weight: 900;
    font-size: 150px;
    mix-blend-mode: normal;
    opacity: 0.2;
    text-shadow: 12.6815px 12.6815px 95.1111px rgba(0, 0, 0, 0.2);
    backdrop-filter: blur(31.7037px);
    text-align: center;
    line-height: .01;
    text-transform: uppercase;
    letter-spacing: 15px;
}

.landing-bttn {
    margin-top: 10rem;
    background-color: black !important;
    color: white !important;
}

.experience-tag {
    visibility: hidden;
}

@media (max-width: 1315px) {
    .title {
        font-size: 100px;
    }

    .title-two {
        font-size: 100px;
    }
}

@media (max-width: 930px) {
    .title {
        font-size: 80px;
    }

    .title-two {
        font-size: 80px;
    }

    .experience-tag {
        visibility: visible;
        text-align: center;
        color: lightgray;
    }
}

@media (max-width: 785px) {
    .title {
        font-size: 60px;
    }

    .title-two {
        font-size: 60px;
    }

    
}

@media (max-width: 640px) {
    .title {
        font-size: 40px;
    }

    .title-two {
        font-size: 40px;
    }
}

@media (max-width: 414px) {
    .title {
        font-size: 40px;
        margin-top: 7rem;
    }

    .title-two {
        font-size: 35px;
    }
}

